--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -236,6 +236,7 @@
         top:0;
         left:0;
         overflow: hidden;
+        background: $color-black;
 
         img {
             width: 100%;
