--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -296,6 +296,7 @@
         display: grid;
         grid-template-columns: repeat(2,minmax(0,1fr));
         gap: 0.25rem;
+        height: 100%;
 
         &-item{
             position: relative;
